--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,16 @@
   <groupId>clinic.programming</groupId>
   <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
+  <build>
+   <plugins>
+   <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+    </plugin>
+   </plugins>
+   </build>
 </project>
