--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
   <build>
    <plugins>
    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>1.16</source>
+            <target>1.16</target>
         </configuration>
     </plugin>
    </plugins>
