--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <groupId>clinic.programming</groupId>
   <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
+  <dependencies>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.12.0</version>
+	</dependency>
+  </dependencies>
   <build>
    <plugins>
    <plugin>
@@ -14,8 +21,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-            <source>1.16</source>
-            <target>1.16</target>
+            <source>1.8</source>
+            <target>1.8</target>
         </configuration>
     </plugin>
    </plugins>
